language-server/src/tests/snapshots/gleam_language_server__tests__completion__private_function.snap
---
source: language-server/src/tests/completion.rs
expression: "\nfn private() {\n  1\n}\n"
---
|
fn private() {
  1
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [1:0-1:0]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
private
  kind:   Function
  detail: fn() -> Int
  sort:   2_private
  desc:   app
  edits:
    [1:0-1:0]: "private"
