language-server/src/tests/snapshots/gleam_language_server__tests__completion__return_keyword.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  $ret\n}\n"
---
pub fn main() {
  $ret|
}


----- Completion content -----
